# leitor_pdf

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: 01_tutorial.md  02_contribua.md  index.md
docs/stylesheet/: extra.css
docs/templates/: cards.html  instalacao.md
leitor_pdf/: cli.py  exceptions.py  main.py
tests/: test_cli.py  test_leitor_pdf.py
